CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(lua)

SET(LUA_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lua" CACHE STRING "Lua include directory")

INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-D_CRT_NONSTDC_NO_DEPRECATE)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
ADD_DEFINITIONS(-D_SCL_SECURE_NO_DEPRECATE)

FILE(GLOB_RECURSE SOURCES ${LUA_INCLUDE_DIR}/*.c)
FILE(GLOB_RECURSE HEADERS ${LUA_INCLUDE_DIR}/*.h)
LIST(REMOVE_ITEM SOURCES ${LUA_INCLUDE_DIR}/lua.c)
LIST(REMOVE_ITEM SOURCES ${LUA_INCLUDE_DIR}/onelua.c)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${HEADERS} ${SOURCES})

install(TARGETS ${PROJECT_NAME} DESTINATION lib)
install(FILES ${HEADERS} DESTINATION include)